--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,7 +1,7 @@
 {
         "gtk-layer-shell": false,
 	"layer": "top",
-	"modules-left": ["custom/launcher","cpu","custom/media","memory"],
+	"modules-left": ["custom/launcher","cpu","memory","custom/media"],
 	"modules-center": ["river/tags"],
 	"modules-right": ["tray","pulseaudio", "network", "clock","custom/power"],
 	
@@ -83,7 +83,6 @@
         "max-length": 10
     },
     "custom/media": {
-        "interval": 30,
         "format": "{icon} {}",
         "return-type": "json",
         "max-length": 20,
